kustomize/components/direct-ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: direct-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER_DOMAIN`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: svc
          port: 80
  tls:
    secretName: direct-cert-tls
    domains:
      - main: PLACEHOLDER_DOMAIN
